add style home section

--- a/app/index.html
+++ b/app/index.html
@@ -11,20 +11,6 @@
 <body>
 <div class="slider">
     <img src="graphics/images/put-your-image-here.png" alt="forest">
-    <ul>
-        <li>
-            <button></button>
-        </li>
-        <li>
-            <button></button>
-        </li>
-        <li>
-            <button></button>
-        </li>
-        <li>
-            <button></button>
-        </li>
-    </ul>
 </div>
 <section class="home">
     <header class="header">
@@ -39,19 +25,51 @@
             <li><a href="#">contact</a></li>
         </ul>
     </header>
-    <div class="content">
-    <h1>We Are Awesome Creative Agency</h1>
-    <p>
-        This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin,
-        lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet
-        nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.
-    </p>
-    <button type="button">button</button>
+    <div class="home-content">
+        <h1>We Are Awesome Creative Agency</h1>
+        <p>
+            This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
+            sollicitudin,
+            lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet
+            nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.
+        </p>
+        <button type="button">button</button>
+        <ul class="slider-button">
+            <li>
+                <button type="button"></button>
+            </li>
+            <li>
+                <button type="button"></button>
+            </li>
+            <li>
+                <button type="button"></button>
+            </li>
+            <li>
+                <button type="button"></button>
+            </li>
+        </ul>
     </div>
 </section>
 
 
-<section class="our-story"></section>
+<section class="our-story content">
+    <div><img src="" alt=""></div>
+    <div>
+        <h2>OUR STORY</h2>
+        <p>
+            This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin,
+            lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet
+            nibh vulputate cursus
+
+        </p>
+        <p>
+            Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non mauris vitae erat
+            consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per
+            inceptos himenaeos.
+        </p>
+        <button type="button">LEARN MORE</button>
+    </div>
+</section>
 
 
 <section class="video"></section>
