add footer  html

--- a/app/index.html
+++ b/app/index.html
@@ -53,11 +53,12 @@
 
 
 <section class="our-story content">
-    <div><img src="" alt=""></div>
+    <div><img src="graphics/images/replace-with-your-logo.png" alt="triangel"></div>
     <div>
         <h2>OUR STORY</h2>
         <p>
-            This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin,
+            This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
+            sollicitudin,
             lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet
             nibh vulputate cursus
 
@@ -72,30 +73,208 @@
 </section>
 
 
-<section class="video"></section>
-
-
-<section class="expertise"></section>
-
-
-<section class="meet"></section>
-
-
-<section class="our-works"></section>
-
-
-<section class="load-more"></section>
-
-
-<section class="quote"></section>
-
-
-<section class="client">
-    <section></section>
-    <section></section>
+<section class="video">
+    <video src="#"></video>
 </section>
 
 
-<footer></footer>
+<section class="expertise">
+    <header>
+        <h2>EXPERTISE</h2>
+        <p>Lorem ipsum dolor sit amet proin gravida nibh vel velit</p>
+    </header>
+    <ul>
+        <li><img src="#" alt="">
+            <h4>WEB DESIGN & DEVELOPMENT</h4>
+            <p>This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
+        </li>
+        <li><img src="#" alt="">
+            <h4>BRANDING IDENTITY</h4>
+            <p>This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
+        </li>
+        <li><img src="#" alt="">
+            <h4>MOBILE APP</h4>
+            <p>This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
+        </li>
+        <li><img src="#" alt="">
+            <h4>SEARCH ENGINE OPTIMIZATION</h4>
+            <p>This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
+        </li>
+        <li><img src="#" alt="">
+            <h4>GAME DEVELOPMENT</h4>
+            <p>This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
+        </li>
+        <li><img src="#" alt="">
+            <h4>MADE WITH LOVE</h4>
+            <p>This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
+        </li>
+    </ul>
+</section>
+
+
+<section class="meet">
+    <header>
+        <h2>MEET OUR AMAZING TEAM</h2>
+        <p>Lorem ipsum dolor sit amet proin gravida nibh vel velit</p>
+    </header>
+    <ul>
+        <li><img src="" alt="">
+            <div>
+                <p>SEMF UCUK</p>
+                <p>CEO & FOUNDER</p>
+            </div>
+        </li>
+        <li><img src="" alt="">
+            <div>
+                <p>DIK ADALIN</p>
+                <p>ENGINEERING</p>
+            </div>
+        </li>
+        <li><img src="" alt="">
+            <div>
+                <p>JENG KOL</p>
+                <p>DESIGNER</p>
+            </div>
+        </li>
+        <li><img src="" alt="">
+            <div>
+                <p>PET ROMAK</p>
+                <p>MARKETING</p>
+            </div>
+        </li>
+    </ul>
+    <footer>
+        <p>Become part of our dream team, let’s join us ! </p>
+        <button type="button">WE ARE HIRING</button>
+    </footer>
+</section>
+
+
+<section class="our-works">
+    <header>
+        <h2>OUR WORKS</h2>
+        <a href="#">See All Project in dribbble ></a>
+    </header>
+    <div class="content">
+        <ul>
+            <li><img src="" alt=""></li>
+            <li><img src="" alt=""></li>
+            <li><img src="" alt=""></li>
+            <li><img src="" alt=""></li>
+            <li><img src="" alt=""></li>
+            <li><img src="" alt=""></li>
+            <li><img src="" alt=""></li>
+            <li><img src="" alt=""></li>
+            <li><img src="" alt=""></li>
+            <li><img src="" alt=""></li>
+            <li><img src="" alt=""></li>
+            <li><img src="" alt=""></li>
+        </ul>
+    </div>
+    <footer>
+        <button type="button">LOAD MORE</button>
+    </footer>
+</section>
+
+
+<section class="our-works">
+    <blockquote>
+        <p>
+            This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
+            sollicitudin,
+            lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet
+            nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor
+            a ornare odio. Sed non mauris vitae erat consequat auctor eu in elit.
+        </p>
+    </blockquote>
+    <div class="user-info">
+        <p></p>
+        <ul>
+            <li><img src="" alt=""></li>
+            <li><img src="" alt=""></li>
+            <li><img src="" alt=""></li>
+            <li><img src="" alt=""></li>
+            <li><img src="" alt=""></li>
+            <button type="button"> <</button>
+            <button type="button"> ></button>
+        </ul>
+    </div>
+</section>
+
+
+<section class="client">
+    <form action="#">
+        <h2></h2>
+        <input type="text" placeholder="Name" name="name">
+        <input type="email" placeholder="Email" name="email">
+        <input type="text" placeholder="Subject" name="subject">
+        <textarea name="your-massage" id="your-massage" cols="30" rows="10" placeholder="Your Massage"></textarea>
+        <button type="submit">SUBMIT</button>
+    </form>
+
+    <div class="our-clients">
+        <ul>
+            <li><img src="" alt=""></li>
+            <li><img src="" alt=""></li>
+            <li><img src="" alt=""></li>
+            <li><img src="" alt=""></li>
+            <li><img src="" alt=""></li>
+            <li><img src="" alt=""></li>
+            <li><img src="" alt=""></li>
+            <li><img src="" alt=""></li>
+            <li><img src="" alt=""></li>
+            <li><img src="" alt=""></li>
+        </ul>
+    </div>
+</section>
+
+
+<footer>
+    <section>
+        <header><a href=""><h1 class="logo">LOGO</h1></a></header>
+        <div class="content">
+            <p>lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh elit. Duis sed odio sit amet
+                auctror a ornare odio non mauris vitae erat in elit</p>
+        </div>
+        <footer>
+            <ul>
+                <li><a href="#">HELP</a></li>
+                <li><a href="#">TERMS & CONDITION</a></li>
+                <li><a href="#">PRIVACY</a></li>
+            </ul>
+        </footer>
+    </section>
+    <section>
+        <header><h3>OUR STUDIO</h3></header>
+        <div class="content">
+            <dl>
+                <dt></dt>
+                <dd>Ruko cucruk, Jl. Radio luar dalem jos No.12 - 13, Kalideres - Jakarta Barat
+                    11480 - Indonesia</dd>
+                <dt></dt>
+                <dd>(+62) 21-2224 3333</dd>
+            </dl>
+        </div>
+    </section>
+    <section>
+        <header><h3>STAY IN TOUCH</h3></header>
+        <div class="content">
+            <form action="#">
+                <input type="text" placeholder="Subscribe our newsletter" name="subscribe">
+                <button type="submit"></button>
+            </form>
+            <ul>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+            </ul>
+        </div>
+        <footer>
+            <p>Copyright © 2015 - Tajem Creative</p>
+        </footer>
+    </section>
+</footer>
 </body>
 </html>
