add section video style

--- a/app/index.html
+++ b/app/index.html
@@ -33,7 +33,7 @@
             lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet
             nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.
         </p>
-        <button type="button">button</button>
+        <button type="button" class="button">learn more</button>
         <ul class="slider-button">
             <li>
                 <button type="button"></button>
@@ -53,23 +53,29 @@
 
 
 <section class="our-story content">
-    <div><img src="graphics/images/replace-with-your-logo.png" alt="triangel"></div>
-    <div>
-        <h2>OUR STORY</h2>
-        <p>
-            This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
-            sollicitudin,
-            lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet
-            nibh vulputate cursus
+    <ul>
+        <li>
+            <img src="graphics/images/replace-with-your-logo.png" alt="triangel">
+        </li>
+        <li>
+            <h2>OUR STORY</h2>
+            <p>
+                This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
+                sollicitudin,
+                lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit
+                amet
+                nibh vulputate cursus
 
-        </p>
-        <p>
-            Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non mauris vitae erat
-            consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per
-            inceptos himenaeos.
-        </p>
-        <button type="button">LEARN MORE</button>
-    </div>
+            </p>
+            <p>
+                Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non mauris vitae
+                erat
+                consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per
+                inceptos himenaeos.
+            </p>
+            <button type="button" class="button">LEARN MORE</button>
+        </li>
+    </ul>
 </section>
 
 
@@ -250,7 +256,8 @@
             <dl>
                 <dt></dt>
                 <dd>Ruko cucruk, Jl. Radio luar dalem jos No.12 - 13, Kalideres - Jakarta Barat
-                    11480 - Indonesia</dd>
+                    11480 - Indonesia
+                </dd>
                 <dt></dt>
                 <dd>(+62) 21-2224 3333</dd>
             </dl>
