--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,7 @@
     <img src="graphics/images/put-your-image-here.png" alt="forest">
 </div>
 <section class="home">
-    <header class="header">
+    <header class="home-header">
         <h1 class="logo">tajam</h1>
         <ul class="nav">
             <li><a href="#">home</a></li>
@@ -85,32 +85,32 @@
 
 
 <section class="expertise">
-    <header>
+    <header class="header">
         <h2>EXPERTISE</h2>
         <p>Lorem ipsum dolor sit amet proin gravida nibh vel velit</p>
     </header>
-    <ul>
-        <li><img src="#" alt="">
+    <ul class="expertise-icons content">
+        <li><img src="graphics/icon/put-your-icon-here.png" alt="">
             <h4>WEB DESIGN & DEVELOPMENT</h4>
             <p>This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
         </li>
-        <li><img src="#" alt="">
+        <li><img src="graphics/icon/put-your-icon-here%20(1).png" alt="">
             <h4>BRANDING IDENTITY</h4>
             <p>This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
         </li>
-        <li><img src="#" alt="">
+        <li><img src="graphics/icon/put-your-icon-here%20(2).png" alt="">
             <h4>MOBILE APP</h4>
             <p>This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
         </li>
-        <li><img src="#" alt="">
+        <li><img src="graphics/icon/put-your-icon-here%20(3).png" alt="">
             <h4>SEARCH ENGINE OPTIMIZATION</h4>
             <p>This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
         </li>
-        <li><img src="#" alt="">
+        <li><img src="graphics/icon/put-your-icon-here%20(4).png" alt="">
             <h4>GAME DEVELOPMENT</h4>
             <p>This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
         </li>
-        <li><img src="#" alt="">
+        <li><img src="graphics/icon/put-your-icon-here%20(5).png" alt="">
             <h4>MADE WITH LOVE</h4>
             <p>This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
         </li>
@@ -119,37 +119,37 @@
 
 
 <section class="meet">
-    <header>
+    <header class="header">
         <h2>MEET OUR AMAZING TEAM</h2>
         <p>Lorem ipsum dolor sit amet proin gravida nibh vel velit</p>
     </header>
-    <ul>
-        <li><img src="" alt="">
+    <ul class="expertise-icon content">
+        <li><img src="graphics/images/put-your-image-here%20(3).png" alt="team">
             <div>
                 <p>SEMF UCUK</p>
                 <p>CEO & FOUNDER</p>
             </div>
         </li>
-        <li><img src="" alt="">
+        <li><img src="graphics/images/put-your-image-here%20(3).png" alt="team">
             <div>
                 <p>DIK ADALIN</p>
                 <p>ENGINEERING</p>
             </div>
         </li>
-        <li><img src="" alt="">
+        <li><img src="graphics/images/put-your-image-here%20(3).png" alt="team">
             <div>
                 <p>JENG KOL</p>
                 <p>DESIGNER</p>
             </div>
         </li>
-        <li><img src="" alt="">
+        <li><img src="graphics/images/put-your-image-here%20(3).png" alt="team">
             <div>
                 <p>PET ROMAK</p>
                 <p>MARKETING</p>
             </div>
         </li>
     </ul>
-    <footer>
+    <footer class="footer">
         <p>Become part of our dream team, let’s join us ! </p>
         <button type="button">WE ARE HIRING</button>
     </footer>
