add our works section

--- a/app/index.html
+++ b/app/index.html
@@ -10,10 +10,10 @@
 </head>
 <body>
 <div class="slider">
-    <img src="graphics/images/put-your-image-here.png" alt="forest">
+    <img src="graphic/images/put-your-image-here.png" alt="forest">
 </div>
 <section class="home">
-    <header class="home-header">
+    <header class="inline-header">
         <h1 class="logo">tajam</h1>
         <ul class="nav">
             <li><a href="#">home</a></li>
@@ -55,7 +55,7 @@
 <section class="our-story content">
     <ul>
         <li>
-            <img src="graphics/images/replace-with-your-logo.png" alt="triangel">
+            <img src="graphic/images/replace-with-your-logo.png" alt="triangel">
         </li>
         <li>
             <h2>OUR STORY</h2>
@@ -90,27 +90,27 @@
         <p>Lorem ipsum dolor sit amet proin gravida nibh vel velit</p>
     </header>
     <ul class="expertise-icons content">
-        <li><img src="graphics/icon/put-your-icon-here.png" alt="">
+        <li><img src="graphic/icon/put-your-icon-here.png" alt="">
             <h4>WEB DESIGN & DEVELOPMENT</h4>
             <p>This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
         </li>
-        <li><img src="graphics/icon/put-your-icon-here%20(1).png" alt="">
+        <li><img src="graphic/icon/put-your-icon-here%20(1).png" alt="">
             <h4>BRANDING IDENTITY</h4>
             <p>This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
         </li>
-        <li><img src="graphics/icon/put-your-icon-here%20(2).png" alt="">
+        <li><img src="graphic/icon/put-your-icon-here%20(2).png" alt="">
             <h4>MOBILE APP</h4>
             <p>This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
         </li>
-        <li><img src="graphics/icon/put-your-icon-here%20(3).png" alt="">
+        <li><img src="graphic/icon/put-your-icon-here%20(3).png" alt="">
             <h4>SEARCH ENGINE OPTIMIZATION</h4>
             <p>This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
         </li>
-        <li><img src="graphics/icon/put-your-icon-here%20(4).png" alt="">
+        <li><img src="graphic/icon/put-your-icon-here%20(4).png" alt="">
             <h4>GAME DEVELOPMENT</h4>
             <p>This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
         </li>
-        <li><img src="graphics/icon/put-your-icon-here%20(5).png" alt="">
+        <li><img src="graphic/icon/put-your-icon-here%20(5).png" alt="">
             <h4>MADE WITH LOVE</h4>
             <p>This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
         </li>
@@ -123,26 +123,26 @@
         <h2>MEET OUR AMAZING TEAM</h2>
         <p>Lorem ipsum dolor sit amet proin gravida nibh vel velit</p>
     </header>
-    <ul class="expertise-icon content">
-        <li><img src="graphics/images/put-your-image-here%20(3).png" alt="team">
+    <ul class="meet-icons content">
+        <li><img src="graphic/images/put-your-image-here%20(3).png" alt="team">
             <div>
                 <p>SEMF UCUK</p>
                 <p>CEO & FOUNDER</p>
             </div>
         </li>
-        <li><img src="graphics/images/put-your-image-here%20(3).png" alt="team">
+        <li><img src="graphic/images/put-your-image-here%20(3).png" alt="team">
             <div>
                 <p>DIK ADALIN</p>
                 <p>ENGINEERING</p>
             </div>
         </li>
-        <li><img src="graphics/images/put-your-image-here%20(3).png" alt="team">
+        <li><img src="graphic/images/put-your-image-here%20(3).png" alt="team">
             <div>
                 <p>JENG KOL</p>
                 <p>DESIGNER</p>
             </div>
         </li>
-        <li><img src="graphics/images/put-your-image-here%20(3).png" alt="team">
+        <li><img src="graphic/images/put-your-image-here%20(3).png" alt="team">
             <div>
                 <p>PET ROMAK</p>
                 <p>MARKETING</p>
@@ -151,34 +151,34 @@
     </ul>
     <footer class="footer">
         <p>Become part of our dream team, let’s join us ! </p>
-        <button type="button">WE ARE HIRING</button>
+        <button type="button" class="button">we are hiring</button>
     </footer>
 </section>
 
 
 <section class="our-works">
-    <header>
+    <header class="our-works-header">
         <h2>OUR WORKS</h2>
         <a href="#">See All Project in dribbble ></a>
     </header>
-    <div class="content">
+    <div class="our-works-content content">
         <ul>
-            <li><img src="" alt=""></li>
-            <li><img src="" alt=""></li>
-            <li><img src="" alt=""></li>
-            <li><img src="" alt=""></li>
-            <li><img src="" alt=""></li>
-            <li><img src="" alt=""></li>
-            <li><img src="" alt=""></li>
-            <li><img src="" alt=""></li>
-            <li><img src="" alt=""></li>
-            <li><img src="" alt=""></li>
-            <li><img src="" alt=""></li>
-            <li><img src="" alt=""></li>
+            <li><img src="graphic/images/put-your-image-here%20(4).png" alt="block"></li>
+            <li><img src="graphic/images/put-your-image-here%20(5).png" alt="block"></li>
+            <li><img src="graphic/images/put-your-image-here%20(4).png" alt="block"></li>
+            <li><img src="graphic/images/put-your-image-here%20(5).png" alt="block"></li>
+            <li><img src="graphic/images/put-your-image-here%20(4).png" alt="block"></li>
+            <li><img src="graphic/images/put-your-image-here%20(5).png" alt="block"></li>
+            <li><img src="graphic/images/put-your-image-here%20(4).png" alt="block"></li>
+            <li><img src="graphic/images/put-your-image-here%20(5).png" alt="block"></li>
+            <li><img src="graphic/images/put-your-image-here%20(4).png" alt="block"></li>
+            <li><img src="graphic/images/put-your-image-here%20(5).png" alt="block"></li>
+            <li><img src="graphic/images/put-your-image-here%20(4).png" alt="block"></li>
+            <li><img src="graphic/images/put-your-image-here%20(5).png" alt="block"></li>
         </ul>
     </div>
-    <footer>
-        <button type="button">LOAD MORE</button>
+    <footer class="footer">
+        <button type="button" class="button">load more</button>
     </footer>
 </section>
 
