add quote section style

--- a/app/index.html
+++ b/app/index.html
@@ -183,8 +183,9 @@
 </section>
 
 
-<section class="our-works">
-    <blockquote>
+<section class="comments">
+    <header class="quote-header"><div class="quote"></div></header>
+    <blockquote class="comments-content">
         <p>
             This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
             sollicitudin,
@@ -193,18 +194,21 @@
             a ornare odio. Sed non mauris vitae erat consequat auctor eu in elit.
         </p>
     </blockquote>
-    <div class="user-info">
-        <p></p>
-        <ul>
-            <li><img src="" alt=""></li>
-            <li><img src="" alt=""></li>
-            <li><img src="" alt=""></li>
-            <li><img src="" alt=""></li>
-            <li><img src="" alt=""></li>
-            <button type="button"> <</button>
-            <button type="button"> ></button>
-        </ul>
-    </div>
+   <footer class="footer">
+       <div class="user-info">
+           <p>JANE GALADRIEL</p>
+           <p>CEO TENGKUREP</p>
+           <ul class="carusel">
+               <li><button type="button" class="back"></button></li>
+               <li><img src="graphic/carusel-images/put-your-image-here%20(7).png" alt="face"></li>
+               <li><img src="graphic/carusel-images/put-your-image-here%20(8).png" alt="face"></li>
+               <li><img src="graphic/carusel-images/put-your-image-here%20(9).png" alt="face"></li>
+               <li><img src="graphic/carusel-images/put-your-image-here%20(10).png" alt="face"></li>
+               <li><img src="graphic/carusel-images/put-your-image-here%20(11).png" alt="face"></li>
+               <li><button type="button" class="next"></button></li>
+           </ul>
+       </div>
+   </footer>
 </section>
 
 
