--- a/app/index.html
+++ b/app/index.html
@@ -184,7 +184,9 @@
 
 
 <section class="comments">
-    <header class="quote-header"><div class="quote"></div></header>
+    <header class="quote-header">
+        <div class="quote"></div>
+    </header>
     <blockquote class="comments-content">
         <p>
             This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
@@ -194,46 +196,60 @@
             a ornare odio. Sed non mauris vitae erat consequat auctor eu in elit.
         </p>
     </blockquote>
-   <footer class="footer">
-       <div class="user-info">
-           <p>JANE GALADRIEL</p>
-           <p>CEO TENGKUREP</p>
-           <ul class="carusel">
-               <li><button type="button" class="back"></button></li>
-               <li><img src="graphic/carusel-images/put-your-image-here%20(7).png" alt="face"></li>
-               <li><img src="graphic/carusel-images/put-your-image-here%20(8).png" alt="face"></li>
-               <li><img src="graphic/carusel-images/put-your-image-here%20(9).png" alt="face"></li>
-               <li><img src="graphic/carusel-images/put-your-image-here%20(10).png" alt="face"></li>
-               <li><img src="graphic/carusel-images/put-your-image-here%20(11).png" alt="face"></li>
-               <li><button type="button" class="next"></button></li>
-           </ul>
-       </div>
-   </footer>
+    <footer class="footer">
+        <div class="user-info">
+            <p>JANE GALADRIEL</p>
+            <p>CEO TENGKUREP</p>
+            <ul class="carusel">
+                <li>
+                    <button type="button" class="back"></button>
+                </li>
+                <li><img src="graphic/carusel-images/put-your-image-here%20(7).png" alt="face"></li>
+                <li><img src="graphic/carusel-images/put-your-image-here%20(8).png" alt="face"></li>
+                <li><img src="graphic/carusel-images/put-your-image-here%20(9).png" alt="face"></li>
+                <li><img src="graphic/carusel-images/put-your-image-here%20(10).png" alt="face"></li>
+                <li><img src="graphic/carusel-images/put-your-image-here%20(11).png" alt="face"></li>
+                <li>
+                    <button type="button" class="next"></button>
+                </li>
+            </ul>
+        </div>
+    </footer>
 </section>
 
 
 <section class="client">
-    <form action="#">
-        <h2></h2>
-        <input type="text" placeholder="Name" name="name">
-        <input type="email" placeholder="Email" name="email">
-        <input type="text" placeholder="Subject" name="subject">
-        <textarea name="your-massage" id="your-massage" cols="30" rows="10" placeholder="Your Massage"></textarea>
-        <button type="submit">SUBMIT</button>
-    </form>
+    <div class="form-wrap">
+        <form action="#">
+            <ul class="form">
+                <li>
+                    <header><h2>GIVE US A GOOD NEWS</h2></header>
+                </li>
+                <li><input type="text" placeholder="Name" name="name"></li>
+                <li><input type="email" placeholder="Email" name="email"></li>
+                <li><input type="text" placeholder="Subject" name="subject"></li>
+                <li><textarea name="your-massage" id="your-massage" cols="30" rows="10"
+                              placeholder="Your Massage"></textarea></li>
+                <li>
+                    <button type="submit" class="button">submit</button>
+                </li>
+            </ul>
+        </form>
+    </div>
 
     <div class="our-clients">
-        <ul>
-            <li><img src="" alt=""></li>
-            <li><img src="" alt=""></li>
-            <li><img src="" alt=""></li>
-            <li><img src="" alt=""></li>
-            <li><img src="" alt=""></li>
-            <li><img src="" alt=""></li>
-            <li><img src="" alt=""></li>
-            <li><img src="" alt=""></li>
-            <li><img src="" alt=""></li>
-            <li><img src="" alt=""></li>
+        <header><h2>OUR HAPPY CLIENT</h2></header>
+        <ul class="partners">
+            <li><img src="graphic/images/zara-logo-svg.png" alt="zara"></li>
+            <li><img src="graphic/images/logo-of-mango--new--svg.png" alt="mango"></li>
+            <li><img src="graphic/images/1280px-barneys-new-york-logo-svg.png" alt="barneys"></li>
+            <li><img src="graphic/images/1280px-gucci-logo-svg.png" alt="gucci"></li>
+            <li><img src="graphic/images/calvin-klein-logo-svg.png" alt="calvin-klein"></li>
+            <li><img src="graphic/images/1280px-logo-nike-svg.png" alt="nike"></li>
+            <li><img src="graphic/images/converse-logo-svg.png" alt="converse"></li>
+            <li><img src="graphic/images/puma-logo-svg.png" alt="puma"></li>
+            <li><img src="graphic/images/1280px-levi-s-logo-svg.png" alt="levi"></li>
+            <li><img src="graphic/images/billabong-svg.png" alt="billabong"></li>
         </ul>
     </div>
 </section>
