--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
 </div>
 <section class="home">
     <header class="inline-header">
-        <h1 class="logo">tajam</h1>
+       <h1 class="logo"><a href="#">tajam</a></h1>
         <ul class="nav">
             <li><a href="#">home</a></li>
             <li><a href="#">about</a></li>
@@ -54,7 +54,7 @@
 
 <section class="our-story content">
     <ul>
-        <li>
+        <li class="our-story-image">
             <img src="graphic/images/replace-with-your-logo.png" alt="triangel">
         </li>
         <li>
@@ -255,14 +255,14 @@
 </section>
 
 
-<footer>
+<footer class="main-footer">
     <section>
-        <header><a href=""><h1 class="logo">LOGO</h1></a></header>
-        <div class="content">
+        <header><h1 class="logo"><a href="#">tajam</a></h1></header>
+        <div>
             <p>lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh elit. Duis sed odio sit amet
                 auctror a ornare odio non mauris vitae erat in elit</p>
         </div>
-        <footer>
+        <footer class="logo-section-footer">
             <ul>
                 <li><a href="#">HELP</a></li>
                 <li><a href="#">TERMS & CONDITION</a></li>
@@ -270,9 +270,9 @@
             </ul>
         </footer>
     </section>
-    <section>
+    <section class="our-studio">
         <header><h3>OUR STUDIO</h3></header>
-        <div class="content">
+        <div>
             <dl>
                 <dt></dt>
                 <dd>Ruko cucruk, Jl. Radio luar dalem jos No.12 - 13, Kalideres - Jakarta Barat
@@ -283,23 +283,24 @@
             </dl>
         </div>
     </section>
-    <section>
+    <section class="stay-in-touch">
         <header><h3>STAY IN TOUCH</h3></header>
-        <div class="content">
+        <div>
             <form action="#">
                 <input type="text" placeholder="Subscribe our newsletter" name="subscribe">
                 <button type="submit"></button>
             </form>
-            <ul>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
+            <ul class="stay-in-touch-list">
+                <li class="facebook"><a href="#" class="facebook"></a></li>
+                <li class="twt"><a href="#"></a></li>
+                <li class="drb"><a href="#"></a></li>
+                <li class="inst"><a href="#"></a></li>
+                <li class="google"><a href="#"></a></li>
+                <li class="youtube"><a href="#"></a></li>
             </ul>
         </div>
         <footer>
-            <p>Copyright © 2015 - Tajem Creative</p>
+            <p>Copyright © 2017 - Tajem Creative</p>
         </footer>
     </section>
 </footer>
