--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto - Thin:100" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -26,7 +27,7 @@
         </ul>
     </header>
     <div class="home-content">
-        <h1>We Are Awesome Creative Agency</h1>
+        <h1 class="content-header">We Are Awesome Creative Agency</h1>
         <p>
             This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
             sollicitudin,
@@ -87,7 +88,7 @@
 <section class="expertise">
     <header class="header">
         <h2>EXPERTISE</h2>
-        <p>Lorem ipsum dolor sit amet proin gravida nibh vel velit</p>
+        <p class="content-header">Lorem ipsum dolor sit amet proin gravida nibh vel velit</p>
     </header>
     <ul class="expertise-icons content">
         <li><img src="graphic/icon/put-your-icon-here.png" alt="">
@@ -121,7 +122,7 @@
 <section class="meet">
     <header class="header">
         <h2>MEET OUR AMAZING TEAM</h2>
-        <p>Lorem ipsum dolor sit amet proin gravida nibh vel velit</p>
+        <p class="content-header font-decor">Lorem ipsum dolor sit amet proin gravida nibh vel velit</p>
     </header>
     <ul class="meet-icons content">
         <li><img src="graphic/images/put-your-image-here%20(3).png" alt="team">
@@ -199,7 +200,7 @@
     <footer class="footer">
         <div class="user-info">
             <p>JANE GALADRIEL</p>
-            <p>CEO TENGKUREP</p>
+            <p class="font-decor">CEO TENGKUREP</p>
             <ul class="carusel">
                 <li>
                     <button type="button" class="back"></button>
@@ -274,11 +275,11 @@
         <header><h3>OUR STUDIO</h3></header>
         <div>
             <dl>
-                <dt></dt>
+                <dt class="address"></dt>
                 <dd>Ruko cucruk, Jl. Radio luar dalem jos No.12 - 13, Kalideres - Jakarta Barat
                     11480 - Indonesia
                 </dd>
-                <dt></dt>
+                <dt class="phone"></dt>
                 <dd>(+62) 21-2224 3333</dd>
             </dl>
         </div>
