--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto - Thin:100" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -88,7 +89,7 @@
 <section class="expertise">
     <header class="header">
         <h2>EXPERTISE</h2>
-        <p class="content-header">Lorem ipsum dolor sit amet proin gravida nibh vel velit</p>
+        <p class="content-header-grey">Lorem ipsum dolor sit amet proin gravida nibh vel velit</p>
     </header>
     <ul class="expertise-icons content">
         <li><img src="graphic/icon/put-your-icon-here.png" alt="">
@@ -122,7 +123,7 @@
 <section class="meet">
     <header class="header">
         <h2>MEET OUR AMAZING TEAM</h2>
-        <p class="content-header font-decor">Lorem ipsum dolor sit amet proin gravida nibh vel velit</p>
+        <p class="meet-header-content-line font-decor">Lorem ipsum dolor sit amet proin gravida nibh vel velit</p>
     </header>
     <ul class="meet-icons content">
         <li><img src="graphic/images/put-your-image-here%20(3).png" alt="team">
