add main-footer style

--- a/app/index.html
+++ b/app/index.html
@@ -288,9 +288,9 @@
     <section class="stay-in-touch">
         <header><h3>STAY IN TOUCH</h3></header>
         <div>
-            <form action="#">
-                <input type="text" placeholder="Subscribe our newsletter" name="subscribe">
-                <button type="submit"></button>
+            <form action="#" class="stay-in-touch-form">
+                <input type="text" placeholder="Subscribe our newsletter" name="subscribe" class="stay-in-touch-input">
+                <button type="submit"class="stay-in-touch-button"></button>
             </form>
             <ul class="stay-in-touch-list">
                 <li class="facebook"><a href="#" class="facebook"></a></li>
